--- a/bundle-workflow/src/test_workflow/config/test_manifest.yml
+++ b/bundle-workflow/src/test_workflow/config/test_manifest.yml
@@ -1,56 +1,56 @@
 components:
-  - name: index-management
-    integ-test:
-      dependencies:
-        - job-scheduler
-        - alerting
-      test-configs:
-        - with-security
-        - without-security
-    bwc-test:
-      dependencies:
-      test-configs:
-        - with-security
-        - without-security
-  - name: anomaly-detection
-    integ-test:
-      dependencies:
-        - job-scheduler
-        - alerting
-      test-configs:
-        - with-security
-        - without-security
-    bwc-test:
-      dependencies:
-      test-configs:
-        - with-security
-        - without-security
-  - name: asynchronous-search
-    integ-test:
-      dependencies:
-        - job-scheduler
-        - alerting
-      test-configs:
-        - with-security
-        - without-security
-    bwc-test:
-      dependencies:
-      test-configs:
-        - with-security
-        - without-security
-  - name: sql
-    integ-test:
-      dependencies:
-        - job-scheduler
-        - alerting
-      test-configs:
-        - with-security
-        - without-security
-    bwc-test:
-      dependencies:
-      test-configs:
-        - with-security
-        - without-security
+  # - name: index-management
+  #   integ-test:
+  #     dependencies:
+  #       - job-scheduler
+  #       - alerting
+  #     test-configs:
+  #       - with-security
+  #       - without-security
+  #   bwc-test:
+  #     dependencies:
+  #     test-configs:
+  #       - with-security
+  #       - without-security
+  # - name: anomaly-detection
+  #   integ-test:
+  #     dependencies:
+  #       - job-scheduler
+  #       - alerting
+  #     test-configs:
+  #       - with-security
+  #       - without-security
+  #   bwc-test:
+  #     dependencies:
+  #     test-configs:
+  #       - with-security
+  #       - without-security
+  # - name: asynchronous-search
+  #   integ-test:
+  #     dependencies:
+  #       - job-scheduler
+  #       - alerting
+  #     test-configs:
+  #       - with-security
+  #       - without-security
+  #   bwc-test:
+  #     dependencies:
+  #     test-configs:
+  #       - with-security
+  #       - without-security
+  # - name: sql
+  #   integ-test:
+  #     dependencies:
+  #       - job-scheduler
+  #       - alerting
+  #     test-configs:
+  #       - with-security
+  #       #- without-security
+  #   bwc-test:
+  #     dependencies:
+  #     test-configs:
+  #       - with-security
+  #       - without-security
   - name: alerting
     integ-test:
       dependencies:
@@ -64,17 +64,30 @@ components:
       test-configs:
         - with-security
         - without-security
-  - name: k-NN
-    integ-test:
-      dependencies:
-        - job-scheduler
-        - alerting
-      test-configs:
-        - with-security
-        - without-security
-    bwc-test:
-      dependencies:
-      test-configs:
-        - with-security
-        - without-security
+  # - name: k-NN
+  #   integ-test:
+  #     dependencies:
+  #       - job-scheduler
+  #       - alerting
+  #     test-configs:
+  #       - with-security
+  #       - without-security
+  #   bwc-test:
+  #     dependencies:
+  #     test-configs:
+  #       - with-security
+  #       - without-security
+  # - name: dashboards-notebooks
+  #   integ-test:
+  #     dependencies:
+  #       - job-scheduler
+  #       - alerting
+  #     test-configs:
+  #       #- with-security
+  #       - without-security
+  #   bwc-test:
+  #     dependencies:
+  #     test-configs:
+  #       - with-security
+  #       #- without-security
 schema-version: '1.0'
