--- a/bundle-workflow/src/test_workflow/config/test_manifest.yml
+++ b/bundle-workflow/src/test_workflow/config/test_manifest.yml
@@ -1,18 +1,24 @@
 components:
-  - name: index-management
+  # - name: index-management
+  #   integ-test:
+  #     dependencies:
+  #       - job-scheduler
+  #       - alerting
+  #     test-configs:
+  #       - with-security
+  #       - without-security
+  #   bwc-test:
+  #     dependencies:
+  #       - job-scheduler
+  #       - alerting
+  #     test-configs:
+  #       - with-security
+  #       - without-security
+  - name: anomaly-detection
     integ-test:
-      test-configs:
-        - with-security
-        - without-security
-    bwc-test:
       dependencies:
         - job-scheduler
         - alerting
-      test-configs:
-        - with-security
-        - without-security
-  - name: anomaly-detection
-    integ-test:
       test-configs:
         - with-security
         - without-security
@@ -25,6 +31,9 @@ components:
         - without-security
   - name: asynchronous-search
     integ-test:
+      dependencies:
+        - job-scheduler
+        - alerting
       test-configs:
         - with-security
         - without-security
@@ -37,6 +46,9 @@ components:
         - without-security
   - name: sql
     integ-test:
+      dependencies:
+        - job-scheduler
+        - alerting
       test-configs:
         - with-security
         - without-security
@@ -49,6 +61,9 @@ components:
         - without-security
   - name: k-NN
     integ-test:
+      dependencies:
+        - job-scheduler
+        - alerting
       test-configs:
         - with-security
         - without-security
