--- a/jenkins/opensearch/Jenkinsfile
+++ b/jenkins/opensearch/Jenkinsfile
@@ -87,7 +87,12 @@ pipeline {
                         script {
                             buildManifest()
                             assembleManifest()
-                            uploadArtifacts(upload: true)
+                            uploadArtifacts(
+                                upload: true, 
+                                dirs: ['builds', 'dist'], 
+                                paths: ['builds/manifest.yml', 'dist/manifest.yml'],
+                                role: 'opensearch-bundle'
+                            )
                         }
                     }
                     post() {
@@ -109,7 +114,12 @@ pipeline {
                         script {
                             buildManifest()
                             assembleManifest()
-                            uploadArtifacts(upload: true)
+                            uploadArtifacts(
+                                upload: true, 
+                                dirs: ['builds', 'dist'], 
+                                paths: ['builds/manifest.yml', 'dist/manifest.yml'],
+                                role: 'opensearch-bundle'
+                            )
                         }
                     }
                     post() {
@@ -155,7 +165,9 @@ pipeline {
                     publishNotification(
                         icon: ':white_check_mark:',
                         message: 'Successful Build',
-                        extra: stashed
+                        extra: stashed,
+                        credentialsId: 'BUILD_NOTICE_WEBHOOK',
+                        variable: 'BUILD_NOTICE_WEBHOOK'
                     )
 
                     cleanWs(
@@ -170,7 +182,9 @@ pipeline {
                 script {
                     publishNotification(
                         icon: ':warning:',
-                        message: 'Failed Build'
+                        message: 'Failed Build',
+                        credentialsId: 'BUILD_NOTICE_WEBHOOK',
+                        variable: 'BUILD_NOTICE_WEBHOOK'
                     )
 
                     cleanWs(
