--- a/manifests/1.2.0/opensearch-1.2.0.yml
+++ b/manifests/1.2.0/opensearch-1.2.0.yml
@@ -7,6 +7,8 @@ ci:
 build:
   name: OpenSearch
   version: 1.2.0
+  platform: linux
+  architecture: x64
 components:
   - name: OpenSearch
     repository: https://github.com/opensearch-project/OpenSearch.git
