--- a/jenkins/test/testsuite/Jenkinsfile
+++ b/jenkins/test/testsuite/Jenkinsfile
@@ -69,7 +69,7 @@ pipeline {
             steps {
                 script {
                     basePath = "https://ci.opensearch.org/ci/dbc/bundle-build/${opensearch_version}/${build_id}/${platform}/${architecture}"
-                    sh "./test.sh ${JOB_NAME} ${basePath} --test-run-id ${env.BUILD_NUMBER}"
+                    sh "./test.sh integ-test ${basePath} --test-run-id ${env.BUILD_NUMBER}"
                 }
             }
             post() {
