--- a/jenkins/opensearch/Jenkinsfile
+++ b/jenkins/opensearch/Jenkinsfile
@@ -147,7 +147,8 @@ pipeline {
                     publishNotification(
                         icon: ':white_check_mark:',
                         message: 'Successful Build',
-                        extra: stashed
+                        extra: stashed,
+                        credentialsId: 'BUILD_NOTICE_WEBHOOK'
                     )
 
                     cleanWs(
@@ -162,7 +163,8 @@ pipeline {
                 script {
                     publishNotification(
                         icon: ':warning:',
-                        message: 'Failed Build'
+                        message: 'Failed Build',
+                        credentialsId: 'BUILD_NOTICE_WEBHOOK'
                     )
 
                     cleanWs(
